After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 794964 - rtsp-media: do not query position on inactive streams if media is complete
rtsp-media: do not query position on inactive streams if media is complete
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-04-04 06:25 UTC by Branko Subasic
Modified: 2018-04-04 07:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
If media is complete do position query on active streams only (3.63 KB, patch)
2018-04-04 06:31 UTC, Branko Subasic
committed Details | Review

Description Branko Subasic 2018-04-04 06:25:24 UTC
If the media is complete, i.e. one or more streams have been configured with sinks, then we want to query the position on those streams only.
Since the inactive streams are blocked, a query on an incomplete stream may return a position that originates from an earlier pre-roll.
Comment 1 Branko Subasic 2018-04-04 06:31:21 UTC
Created attachment 370514 [details] [review]
If media is complete do position query on active streams only
Comment 2 Sebastian Dröge (slomo) 2018-04-04 07:06:36 UTC
commit 48ad01beba0ebb7a91bcd461a610a49453343393
Author: Branko Subasic <branko@axis.com>
Date:   Tue Apr 3 08:57:47 2018 +0200

    rtsp-media: query the position on active streams if media is complete
    
    If the media is complete, i.e. one or more streams have been configured
    with sinks, then we want to query the position on those streams only.
    A query on an incomplete stream may return a position that originates from
    an earlier preroll.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=794964